--- a/appsettings.json
+++ b/appsettings.json
@@ -1,18 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Database=AssetDB;Username=postgres;Password=Langat001"
+    },
+    "AllowedHosts": "*",
+    "JwtSettings": {
+        "SecretKey": "ThisIsASecretKeyThatIsAtLeast32Chars!!",
+        "Issuer": "AssetManagementSystem",
+        "Audience": "AssetManagementSystemUsers",
+        "ExpiryInMinutes": 600
+    },
+    "EmailSettings": {
+        "SmtpServer": "smtp.example.com",
+        "SmtpPort": 587,
+        "SmtpUser": "your-smtp-user@example.com",
+        "SmtpPass": "your-smtp-password",
+        "FromName": "Asset Management System",
+        "FromEmail": "no-reply@example.com",
+        "UseSsl": false,
+        "AdminEmails": [ "admin1@example.com", "admin2@example.com" ]
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=AssetDB;Username=postgres;Password=Langat"
-  },
-  "AllowedHosts": "*",
-  "JwtSettings": {
-    "SecretKey": "ThisIsASecretKeyThatIsAtLeast32Chars!!",
-    "Issuer": "AssetManagementSystem",
-    "Audience": "AssetManagementSystemUsers",
-    "ExpiryInMinutes": 600
-  }
 }
