--- a/appsettings.json
+++ b/appsettings.json
@@ -16,13 +16,25 @@
         "ExpiryInMinutes": 600
     },
     "EmailSettings": {
-        "SmtpServer": "smtp.example.com",
-        "SmtpPort": 587,
-        "SmtpUser": "your-smtp-user@example.com",
-        "SmtpPass": "your-smtp-password",
+        "SmtpServer": "smtp.mailtrap.io",
+        "SmtpPort": 2525,
+        "SmtpUser": "9d23bb2490e0c0",
+        "SmtpPass": "10bf8ab85bdb89",
         "FromName": "Asset Management System",
         "FromEmail": "no-reply@example.com",
         "UseSsl": false,
-        "AdminEmails": [ "admin1@example.com", "admin2@example.com" ]
+        "AdminEmails": [ "admin@example.com" ]
     }
+
 }
+
+//"EmailSettings": {
+//  "SmtpServer": "smtp.gmail.com",
+//  "SmtpPort": 587,
+//  "SmtpUser": "youremail@gmail.com",
+//  "SmtpPass": "your-app-password",
+//  "FromName": "Asset Management System",
+//  "FromEmail": "youremail@gmail.com",
+//  "UseSsl": true,
+//  "AdminEmails": [ "admin1@domain.com", "admin2@domain.com" ]
+//}
