Approval Work actions

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,32 +1,37 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Database=AssetDB;Username=postgres;Password=Langat001"
-    },
-    "AllowedHosts": "*",
-    "JwtSettings": {
-        "SecretKey": "ThisIsASecretKeyThatIsAtLeast32Chars!!",
-        "Issuer": "AssetManagementSystem",
-        "Audience": "AssetManagementSystemUsers",
-        "ExpiryInMinutes": 600
-    },
-    "EmailSettings": {
-        "SmtpServer": "smtp.mailtrap.io",
-        "SmtpPort": 2525,
-        "SmtpUser": "9d23bb2490e0c0",
-        "SmtpPass": "10bf8ab85bdb89",
-        "FromName": "Asset Management System",
-        "FromEmail": "no-reply@example.com",
-        "UseSsl": false,
-        "AdminEmails": [ "admin@example.com" ]
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=AssetDB;Username=postgres;Password=Langat001"
+  },
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "ThisIsASecretKeyThatIsAtLeast32Chars!!",
+    "Issuer": "AssetManagementSystem",
+    "Audience": "AssetManagementSystemUsers",
+    "ExpiryInMinutes": 600
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.mailtrap.io",
+    "SmtpPort": 2525,
+    "SmtpUser": "9d23bb2490e0c0",
+    "SmtpPass": "10bf8ab85bdb89",
+    "FromName": "Asset Management System",
+    "FromEmail": "no-reply@example.com",
+    "UseSsl": false,
+    "AdminEmails": [ "admin@example.com" ]
+  }
 
 }
+
+//dotnet ef migrations add SomeChange --context ApplicationDbContext
+// dotnet ef database update --context ApplicationDbContext
+
+
 
 //"EmailSettings": {
 //  "SmtpServer": "smtp.gmail.com",
